# imagemeta-rs

./: .travis.yml  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT  ReadMe.md
src/: jpeg.rs  lib.rs  tag.rs
src/exif/: jpeg.rs  mod.rs
